--- a/index.html
+++ b/index.html
@@ -2,11 +2,9 @@
 <head>
   <meta charset="utf-8" />
   <title>UniversalJS</title>
-  <script src="https://unpkg.com/react@15/dist/react.js"></script>
-  <script src="https://unpkg.com/react-dom@15/dist/react-dom.js"></script>
-  <script src="./index.js"></script>
 </head>
-<body onload="onLoad()">
+<body>
   <div id="target" />
+  <script src="./bundle.js"></script>
 </body>
 </html>
