--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <meta charset="utf-8" />
   <title>UniversalJS</title>
 </head>
-<body>
-  <div id="target" />
+<body style="margin: 0px; overflow: hidden;">
+  <canvas id="canvas" width="480" height="270" />
   <script src="./bundle.js"></script>
 </body>
 </html>
