--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <head>
   <meta charset="utf-8" />
   <title>UniversalJS</title>
+  <script src="http://localhost:35729/livereload.js"></script>
 </head>
 <body style="margin: 0px; overflow: hidden;">
-  <canvas id="canvas" width="480" height="270" />
+  <canvas id="canvas" width="1920" height="1080" />
   <script src="./bundle.js"></script>
 </body>
 </html>
