--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body style="margin: 0px; overflow: hidden;">
   <canvas id="canvas" width="1920" height="1080" />
-  <script src="./bundle.js"></script>
+  <script src="./index.bundle.js"></script>
 </body>
 </html>
